fixed export and import ui spacing issue

--- a/services/src/openkilda-gui/ui/src/app/modules/topology/topology-menu/topology-menu.component.css
+++ b/services/src/openkilda-gui/ui/src/app/modules/topology/topology-menu/topology-menu.component.css
@@ -7,16 +7,6 @@
     color: #1b1f26;
     position: relative;
 }
-/* .export-setting{
-    font-size: 20px;
-    margin:0px,12px;
-    cursor: pointer;
-    bottom: -2px;
-    color: #1b1f26;
-    position: relative;
-} */
-
-
 .isl_flow_switch {
     margin-bottom: -10px;
     margin-top: -7px;
