--- a/services/src/openkilda-gui/ui/src/styles.css
+++ b/services/src/openkilda-gui/ui/src/styles.css
@@ -992,7 +992,7 @@ pre.code {
   background: url(assets/images/36x36/inbox-out-regular-black.png) no-repeat 0 0;
   background-size: 26px auto;
   display: inline-block;
-  width: 26px;
+  width: 29px;
   height: 26px;
 }
 .affected-isl .icon-affected-isl {
